# cmd

./: .gitignore  CMakeLists.txt  Makefile  common_macro.h  main.c  modulars.h  new_modular.sh  readme.md
modulars/A_shares/: A_shares.c  A_shares.h
modulars/hello/: CMakeLists.txt  hello.c  hello.h
modulars/test2/: test2.c  test2.h
scripts/: new_modular.sh
